--- a/Star_Classification.ipynb
+++ b/Star_Classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Star_Classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0dHktp1XBPxBTLQjvxAez",
+      "authorship_tag": "ABX9TyPaFNlNGG+3pKG4d6jLQJeM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
         "outputId": "14c5cc2d-0852-4e66-ac94-1684343c129b"
       },
       "source": [
-        "data = pd.read_csv(\"6 class csv.csv\")\n",
+        "data = pd.read_csv(\"star_data.csv\")\n",
         "data.describe()"
       ],
       "execution_count": 210,
